k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hl-project-ingress
  namespace: hl-project
spec:
  ingressClassName: nginx
  rules:
    - host: hl-project.test
      http:
        paths:
          - path: "/static/"
            pathType: Prefix
            backend:
              service:
                name: static-service
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 8000
